# FlowForge

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  task.md
.github/workflows/: testing.yml
flowforge/: __init__.py
flowforge/input/: BodyForces.py  BoundaryConditions.py  ComponentCoupler.py  Components.py  CoupledComponentInterface.py  Shapes.py  SolidCompnents.py  SolidComponents.py  SolidCrossSections.py  System.py  UnitConverter.py  WallFunctions.py
flowforge/materials/: Fluid.py  Material.py  Solid.py  __init__.py
flowforge/meshing/: FluidMesh.py
flowforge/parsers/: EquationParser.py  OpenFoamParser.py  OutputParser.py  SythParser.py  __init__.py
flowforge/parsers/OpenFoam_Parser/: data_visualizer.ipynb
flowforge/visualization/: VTKFile.py  VTKMesh.py  __init__.py
flowforge/visualization/VTKShapes/: __init__.py  annulus.py  cube.py  cylinder.py  nozzle.py  square.py  trigrid.py
flowforge/writers/: ModelWriter.py  OpenfoamWriter.py
tests/: test_utils.py
tests/input/: _test_CoreComponents.py  test_BodyForces.py  test_BoundaryConditions.py  test_ComponentCoupler.py  test_Components.py  test_CoreComponents.py  test_CoupledComponentInterface.py  test_CoupledSystem.py  test_Shapes.py  test_SolidComponents.py  test_SolidCrossSections.py  test_UnitConverter.py  test_WallFunctions.py
tests/input/testCoupledComponents/: coupled_input_file.json
tests/input/testSolidComponents/: input.json
tests/materials/: test_Fluid.py  test_Solid.py
tests/meshing/: test_FluidMesh.py
tests/parsers/: test_EquationParser.py  test_OpenFoamParser.py
tests/visualization/: test_VTKFile.py  test_VTKMesh.py  test_VTKShapes.py
tests/writers/: test_OpenFoamWriter.py
(+50 files in other folders)
